--- a/todo-app/todo-api-java/Jenkinsfile
+++ b/todo-app/todo-api-java/Jenkinsfile
@@ -18,6 +18,8 @@ node {
     final PROJECT_IMAGE_NAME = 'architechbootcamp/todo-api'
     final PROJECT_PATH = 'todo-app/todo-api-java'
     final DEPLOYMENT_NAME = 'todo-api'
+    final QA_NAMESPACE = 'qa-env'
+    final PROD_NAMESPACE = 'prod-env'
 
     def buildEnv;
 
@@ -50,14 +52,17 @@ node {
         IMAGE_SEMVER = "${PROJECT_VERSION}.${GIT_REVISION_COUNT}"
         IMAGE_FULL_VERSION = "${IMAGE_SEMVER}_${GIT_REVISION}"
 
-        OLD_IMAGE_VERSION_QA = sh(
-            script: "/usr/local/bin/kubectl get deployment/\${DEPLOYMENT_NAME} --namespace=qa-env -o wide | awk '{ if (NR!=1) {print \$8}}' | cut -d ':' -f 2",
+/*        OLD_IMAGE_VERSION_QA = sh(
+            script: "/usr/local/bin/kubectl get deployment/${DEPLOYMENT_NAME} --namespace=${QA_NAMESPACE} -o wide | awk '{ if (NR!=1) {print \$8}}' | cut -d ':' -f 2",
             returnStdout: true
         ).trim()
         OLD_IMAGE_VERSION_PROD = sh(
-            script: "/usr/local/bin/kubectl get deployment/\${DEPLOYMENT_NAME} --namespace=prod-env -o wide | awk '{ if (NR!=1) {print \$8}}' | cut -d ':' -f 2",
+            script: "/usr/local/bin/kubectl get deployment/${DEPLOYMENT_NAME} --namespace=${PROD_NAMESPACE} -o wide | awk '{ if (NR!=1) {print \$8}}' | cut -d ':' -f 2",
             returnStdout: true
         ).trim()
+*/
+        OLD_IMAGE_VERSION_QA = getCurrentDeploymentVersion(QA_NAMESPACE)
+        OLD_IMAGE_VERSION_PROD = getCurrentDeploymentVersion(PROD_NAMESPACE)
     }
     stage('Test') {
         def projectName = "todoapi${env.BUILD_NUMBER}"
@@ -94,7 +99,10 @@ node {
     }
 
     stage('Deploy to QA') {
-        sh "/usr/local/bin/kubectl set image deployment/${DEPLOYMENT_NAME} ${DEPLOYMENT_NAME}=${PROJECT_IMAGE_NAME}:${IMAGE_FULL_VERSION} --namespace=qa-env"
+        deployImage(
+            imageTag: "${QA_IMAGE_FULL_VERSION}",
+            namespace: "${QA_NAMESPACE}"
+        )
     }
 
     stage('QA Test') {
@@ -108,7 +116,10 @@ node {
                             ]
         } catch (error) {
             //TODO: Rollback QA deployment here ?
-            sh "/usr/local/bin/kubectl set image deployment/${DEPLOYMENT_NAME} ${DEPLOYMENT_NAME}=${PROJECT_IMAGE_NAME}:${OLD_IMAGE_VERSION_QA} --namespace=qa-env"
+            deployImage(
+                imageTag: "${OLD_IMAGE_VERSION_QA}",
+                namespace: "${QA_NAMESPACE}"
+            )
         }
     }
 
@@ -126,12 +137,29 @@ node {
     stage('Deploy to Prod') {
         input 'Push to Production?'
         //TODO: Push to production
-        sh "/usr/local/bin/kubectl set image deployment/${DEPLOYMENT_NAME} ${DEPLOYMENT_NAME}=${PROJECT_IMAGE_NAME}:${IMAGE_FULL_VERSION} --namespace=prod-env"
+        deployImage(
+            imageTag: "${IMAGE_FULL_VERSION}",
+            namespace: "${PROD_NAMESPACE}"
+        )
     }
 
     stage('Roll back Prod') {
         input 'Roll back Production?'
-        sh "/usr/local/bin/kubectl set image deployment/${DEPLOYMENT_NAME} ${DEPLOYMENT_NAME}=${PROJECT_IMAGE_NAME}:${OLD_IMAGE_VERSION_PROD} --namespace=qa-env"
+        deployImage(
+            imageTag: "${OLD_IMAGE_VERSION_PROD}",
+            namespace: "${PROD_NAMESPACE}"
+        )
     }
 
+}
+
+def deployImage(Map attrs) {
+    sh("/usr/local/bin/kubectl set image deployment/${DEPLOYMENT_NAME} ${DEPLOYMENT_NAME}=${PROJECT_IMAGE_NAME}:${attrs.imageTag} --namespace=${attrs.namespace}")
+}
+
+def getCurrentDeploymentVersion(String namespace) {
+    return sh(
+        script: "/usr/local/bin/kubectl get deployment/${DEPLOYMENT_NAME} --namespace=${namespace} -o wide | awk '{ if (NR!=1) {print \$8}}' | cut -d ':' -f 2",
+        returnStdout: true
+    ).trim()
 }
