--- a/services/external-name-service.yml
+++ b/services/external-name-service.yml
@@ -11,11 +11,11 @@ kind: Service
 apiVersion: v1
 metadata:
   #when looking up this service using the service name, the cluster
-  #DNS will return a CNAME record with the value quotes.rest/qod
+  #DNS will return a CNAME record with the value quotes.rest
   name:  random-quote-service
 spec:
   type:  ExternalName
-  externalName: quotes.rest/qod
+  externalName: quotes.rest #must be a valid DNS name.  e.g. you can't do https://quotes.rest/qod
 ---
 # This is the deployment and pod template for the API that will
 # integrate with the random-quote-service
@@ -47,5 +47,8 @@ spec:
           limits:
             cpu: "20m"
             memory: "55M"
-      restartPolicy: Always
-      imagePullPolicy: Always
+        restartPolicy: Always
+        imagePullPolicy: Always
+        env:
+        - name: RANDOM_QUOTE_SERVICE
+          value: random-quote-service
