--- a/services/random-quote-api/Dockerfile
+++ b/services/random-quote-api/Dockerfile
@@ -2,5 +2,5 @@ FROM scratch
 #required for TLS
 ADD ca-certificates.crt /etc/ssl/certs/
 ADD main /
-ENV RANDOM_QUOTE_SERVICE "https://quotes.rest/qod"
+ENV RANDOM_QUOTE_SERVICE "quotes.rest"
 CMD ["/main"]
